Fit Quantity supports vectors

--- a/files/citations.bib
+++ b/files/citations.bib
@@ -290,6 +290,13 @@ year = {2018}
       adsurl = {https://rdcu.be/b08Wh},
       doi = {10.1038/s41592-019-0686-2},
 }
+@misc{sqlite2020hipp,
+  title={{SQLite}},
+  url={https://www.sqlite.org/index.html},
+  version={3.31.1},
+  year={2020},
+  author={Hipp, Richard D}
+}
 @ARTICLE{ultranest,
        author = {{Buchner}, Johannes},
         title = "{UltraNest - a robust, general purpose Bayesian inference engine}",
