--- a/files/citations.tex
+++ b/files/citations.tex
@@ -87,6 +87,10 @@ This work uses the following software packages:
 \citep{scipy}
 
 \item
+\href{https://www.sqlite.org/index.html}
+\citep{sqlite}
+
+\item
 \href{https://github.com/JohannesBuchner/UltraNest}{\textt{UltraNest}}
 \citep{ultranest}
 
