--- a/files/citations.bib
+++ b/files/citations.bib
@@ -290,7 +290,7 @@ year = {2018}
       adsurl = {https://rdcu.be/b08Wh},
       doi = {10.1038/s41592-019-0686-2},
 }
-@misc{sqlite2020hipp,
+@misc{sqlite,
   title={{SQLite}},
   url={https://www.sqlite.org/index.html},
   version={3.31.1},
