--- a/files/citations.bib
+++ b/files/citations.bib
@@ -159,6 +159,18 @@ year = {2015}
   title = {`PyAutoFit`: A Classy Probabilistic Programming Language for Model Composition and Fitting},
   journal = {J. Open Source Softw.}
 }
+@article{pyautogalaxy,
+  doi = {10.21105/joss.04475},
+  url = {https://doi.org/10.21105/joss.04475},
+  year = {2023},
+  publisher = {The Open Journal},
+  volume = {8},
+  number = {81},
+  pages = {4475},
+  author = {James. W. Nightingale and Aristeidis Amvrosiadis and Richard G. Hayes and Qiuhan He and Amy Etherington and XiaoYue Cao and Shaun Cole and Jonathan Frawley and Carlos S. Frenk and Sam Lange and Ran Li and Richard J. Massey and Mattia Negrello and Andrew Robertson},
+  title = {PyAutoGalaxy: Open-Source Multiwavelength Galaxy Structure & Morphology},
+  journal = {Journal of Open Source Software}
+ }
 @article{pyautolens,
   doi = {10.21105/joss.02825},
   url = {https://doi.org/10.21105/joss.02825},
