--- a/files/citations.tex
+++ b/files/citations.tex
@@ -47,6 +47,10 @@ This work uses the following software packages:
 \citep{pyautofit}
 
 \item
+\href{https://github.com/Jammy2211/PyAutoGalaxy}{\textt{PyAutoGalaxy}}
+\citep{Nightingale2018, pyautogalaxy}
+
+\item
 \href{https://github.com/Jammy2211/PyAutoLens}{\textt{PyAutoLens}}
 \citep{Nightingale2015, Nightingale2018, pyautolens}
 
