--- a/files/citations.bib
+++ b/files/citations.bib
@@ -125,6 +125,23 @@ year = {2013}
   doi       = {10.1109/MCSE.2007.55},
   year      = 2007
 }
+@ARTICLE{nautilus,
+       author = {{Lange}, Johannes U.},
+        title = "{NAUTILUS: boosting Bayesian importance nested sampling with deep learning}",
+      journal = {\mnras},
+     keywords = {methods: data analysis, methods: statistical, software: data analysis, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Astrophysics of Galaxies, Computer Science - Machine Learning},
+         year = 2023,
+        month = oct,
+       volume = {525},
+       number = {2},
+        pages = {3181-3194},
+          doi = {10.1093/mnras/stad2441},
+archivePrefix = {arXiv},
+       eprint = {2306.16923},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023MNRAS.525.3181L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 @article{numba,
 abstract = {Dynamic, interpreted languages, like Python, are attractive for domain-experts and scientists experimenting with new ideas. However, the performance of the interpreter is of-ten a barrier when scaling to larger data sets. This paper presents a just-in-time compiler for Python that focuses in scientific and array-oriented computing. Starting with the simple syntax of Python, Numba compiles a subset of the language into efficient machine code that is comparable in performance to a traditional compiled language. In addi-tion, we share our experience in building a JIT compiler using LLVM[1].},
 author = {Lam, Siu Kwan and Pitrou, Antoine and Seibert, Stanley},
@@ -367,7 +384,7 @@ year = {2019}
     eprint = {https://academic.oup.com/mnras/article-pdf/488/1/1387/28937972/stz1796.pdf},
 }
 
-@INPROCEEDINGS{dynesty1,
+@INPROCEEDINGS{multinest1,
        author = {{Skilling}, John},
         title = "{Nested Sampling}",
      keywords = {02.50.Tt, Inference methods},
@@ -384,7 +401,7 @@ year = {2019}
 }
 
 
-@article{dynesty2,
+@article{multinest2,
 abstract = {Nested sampling estimates directly how the likelihood function relates to prior mass. The evidence (alternatively the marginal likelihood, marginal density of the data, or the prior predictive) is immediately obtained by summation. It is the prime result of the computation, and is accompanied by an estimate of numerical uncertainty. Samples from the posterior distribution are an optional by-product, obtainable for any temperature. The method relies on sampling within a hard constraint on likelihood value, as opposed to the softened likelihood of annealing methods. Progress depends only on the shape of the "nested"contours of likelihood, and not on the likelihood values. This invariance (over monotonic relabelling) allows the method to deal with a class of phasechange problems which effectively defeat thermal annealing. {\textcopyright} 2006 International Society for Bayesian Analysis.},
 archivePrefix = {arXiv},
 arxivId = {arXiv:1011.1669v3},
@@ -404,7 +421,7 @@ volume = {1},
 year = {2006}
 }
 
-@article{dynesty3,
+@article{multinest3,
 abstract = {We present further development and the first public release of our multimodal nested sampling algorithm, called MultiNest. This Bayesian inference tool calculates the evidence, with an associated error estimate, and produces posterior samples from distributions that may contain multiple modes and pronounced (curving) degeneracies in high dimensions. The developments presented here lead to further substantial improvements in sampling efficiency and robustness, as compared to the original algorithm presented in Feroz and Hobson, which itself significantly outperformed existing Markov chain Monte Carlo techniques in a wide range of astrophysical inference problems. The accuracy and economy of the MultiNest algorithm are demonstrated by application to two toy problems and to a cosmological inference problem focusing on the extension of the vanilla $\Lambda$ cold dark matter model to include spatial curvature and a varying equation of state for dark energy. The MultiNest software, which is fully parallelized using MPI and includes an interface to CosmoMC, is available at http://www.mrao.cam.ac.uk/software/multinest/. It will also be released as part of the SuperBayeS package, for the analysis of supersymmetric theories of particle physics, at http://www.superbayes.org. {\textcopyright} 2009 RAS.},
 archivePrefix = {arXiv},
 arxivId = {0809.3437},
